rectifiere la marge des filtres, les aligner correctement

--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ div .filtres{
 .filtres ul{
         display: flex;  
         flex-wrap: wrap;
-        padding: 0 20px;
+/*        padding: 0 20px;*/
     }
 
 
